--- a/src/css/base/vars.css
+++ b/src/css/base/vars.css
@@ -3,7 +3,7 @@
   --white-color: #fff;
   --other-white-color: #f5f5f5;
   --dark-color: #000;
-  --dark-charcoal-color: #303336;
+  --dark-charcoal-color: #0c0c0c;
   --red-color: #fd0000;
   --light-red-color: #e71e2d;
   --other-light-red-color: #d92d2e;
