--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,4 +4,5 @@
 /* components */
 @import './components/header';
 @import './components/home/hero';
+@import './components/home/extras';
 @import './components/footer';
