--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -12,6 +12,21 @@ html {
   box-sizing: inherit;
 }
 
+body *:-moz-selection {
+  color: var(--white-color);
+  background-color: var(--other-light-red-color);
+}
+
+body *::-webkit-selection {
+  color: var(--white-color);
+  background-color: var(--other-light-red-color);
+}
+
+body *::selection {
+  color: var(--white-color);
+  background-color: var(--other-light-red-color);
+}
+
 .body {
   position: relative;
   overflow-x: hidden;
