--- a/src/css/components/header.css
+++ b/src/css/components/header.css
@@ -18,14 +18,50 @@
 }
 
 .header__logo {
+  z-index: var(--z-index-4);
   display: block;
   overflow: hidden;
   max-width: 80px;
 }
 
+@media (max-width: 768px) {
+  .header__nav {
+    position: fixed;
+    top: 0;
+    left: -100vw;
+    z-index: var(--z-index-3);
+    display: flex;
+    gap: 80px;
+    flex-direction: column;
+    justify-content: center;
+    width: 80dvw;
+    height: 100dvh;
+    background-color: var(--other-grey-color);
+    opacity: 0;
+    visibility: hidden;
+    transition:
+      left var(--transition),
+      opacity var(--transition),
+      visibility var(--transition);
+  }
+
+  .header__nav--visible {
+    left: 0;
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
 .nav__list {
   display: flex;
   gap: 40px;
+}
+
+@media (max-width: 768px) {
+  .nav__list {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .nav__link {
@@ -34,6 +70,13 @@
   font-size: 20px;
   color: var(--other-dark-color);
   transition: color var(--transition);
+}
+
+@media (max-width: 768px) {
+  .nav__link {
+    font-size: 24px;
+    color: var(--white-color);
+  }
 }
 
 .nav__link::after {
@@ -57,6 +100,35 @@
 
 .nav__link:hover::after {
   opacity: 1;
+  visibility: visible;
+}
+
+.header__burger {
+  z-index: var(--z-index-4);
+  display: none;
+  flex-shrink: 0;
+}
+
+@media (max-width: 768px) {
+  .header__burger {
+    display: block;
+  }
+}
+
+.overlay {
+  position: fixed;
+  inset: 0;
+  z-index: var(--z-index-3);
+  background-color: var(--dark-color);
+  opacity: 0;
+  visibility: hidden;
+  transition:
+    opacity var(--transition),
+    visibility var(--transition);
+}
+
+.overlay--visible {
+  opacity: 0.7;
   visibility: visible;
 }
 
