Create new section + adaptive

--- a/src/css/base/vars.css
+++ b/src/css/base/vars.css
@@ -7,8 +7,7 @@
   --red-color: #fd0000;
   --light-red-color: #e71e2d;
   --other-light-red-color: #d92d2e;
-  --grey-color: #565656;
-  --other-grey-color: #303336;
+  --grey-color: #81899a;
   --light-grey-color: #ccc;
   --other-light-grey-color: #d9d9d9;
 
