--- a/src/css/globals/decors.css
+++ b/src/css/globals/decors.css
@@ -12,6 +12,20 @@
   filter: blur(240px);
 }
 
+@media (max-width: 992px) {
+  .container__decor::after {
+    width: 400px;
+    height: 400px;
+  }
+}
+
+@media (max-width: 576px) {
+  .container__decor::after {
+    width: 300px;
+    height: 300px;
+  }
+}
+
 .container__decor::after {
   right: -300px;
   bottom: -300px;
@@ -20,6 +34,20 @@
   background-color: var(--other-light-red-color);
   opacity: 0.13;
   filter: blur(180px);
+}
+
+@media (max-width: 992px) {
+  .container__decor::before {
+    width: 400px;
+    height: 400px;
+  }
+}
+
+@media (max-width: 576px) {
+  .container__decor::before {
+    width: 300px;
+    height: 300px;
+  }
 }
 
 .container__decor::before,
@@ -31,7 +59,7 @@
   border-radius: 50%;
 }
 
-.text-decor {
+.text__decor {
   position: absolute;
   z-index: var(--z-index-1);
   display: flex;
@@ -42,10 +70,57 @@
   color: var(--red-color);
 }
 
+@media (max-width: 992px) {
+  .text__decor {
+    display: none;
+  }
+}
+
+.text__decor--first {
+  top: 100px;
+  right: 300px;
+}
+
+@media (max-width: 1440px) {
+  .text__decor--first {
+    right: 150px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .text__decor--first {
+    right: 15px;
+  }
+}
+
 .img-decor {
   position: relative;
   overflow: hidden;
-  max-height: 650px;
+  height: 650px;
+}
+
+@media (max-width: 992px) {
+  .img-decor {
+    position: relative;
+    overflow: hidden;
+    height: 550px;
+  }
+}
+
+@media (max-width: 576px) {
+  .img-decor {
+    position: relative;
+    overflow: hidden;
+    height: 450px;
+  }
+}
+
+@media (max-width: 380px) {
+  .img-decor {
+    position: relative;
+    overflow: hidden;
+    height: 400px;
+  }
 }
 
 .img-decor::before {
@@ -53,7 +128,7 @@
   position: absolute;
   inset: 0;
   background-color: var(--dark-color);
-  opacity: 0.3;
+  opacity: 0.4;
 }
 
 .img-decor img {
