--- a/src/css/components/home/extras.css
+++ b/src/css/components/home/extras.css
@@ -2,9 +2,69 @@
   padding: 120px 0;
 }
 
+@media (max-width: 576px) {
+  .extras {
+    padding: 60px 0;
+  }
+}
+
 .extras__title {
   margin-bottom: 80px;
   font-weight: 600;
   font-size: 80px;
+}
+
+@media (max-width: 768px) {
+  .extras__title {
+    margin-bottom: 60px;
+    font-size: 60px;
+  }
+}
+
+@media (max-width: 576px) {
+  .extras__title {
+    font-size: 40px;
+  }
+}
+
+.extras__list {
+  display: grid;
+  gap: 30px 20px;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+@media (max-width: 992px) {
+  .extras__list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 576px) {
+  .extras__list {
+    gap: 20px;
+    grid-template-columns: none;
+  }
+}
+
+.extras__item {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.extras__item-icon {
+  display: flex;
+  flex-shrink: 0;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  width: 45px;
+  height: 45px;
+  background-color: var(--other-light-red-color);
+}
+
+.extras__item-title {
+  font-weight: 600;
+  font-size: 20px;
 }
 
