--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,4 +5,6 @@
 @import './components/header';
 @import './components/home/hero';
 @import './components/home/extras';
+@import './components/home/services';
+@import './components/home/testimonials';
 @import './components/footer';
