create testimonials section

--- a/src/css/components/home/testimonials.css
+++ b/src/css/components/home/testimonials.css
@@ -26,3 +26,156 @@
     font-size: 40px;
   }
 }
+
+.testimonials__slider-wrapper::before {
+  content: '';
+  display: inline-block;
+  width: 115px;
+  height: 77px;
+  background: url('../../../assets/icons/quotes-icon.svg');
+  transform: translateY(15px);
+}
+
+@media (max-width: 1200px) {
+  .testimonials__slider-wrapper::before {
+    transform: translateY(-10px);
+  }
+}
+
+@media (max-width: 576px) {
+  .testimonials__slider-wrapper::before {
+    display: none;
+  }
+}
+
+.testimonials__slider {
+  z-index: var(--z-index-minus-1);
+  margin-bottom: 20px;
+  max-width: 898px;
+}
+
+.testimonials__rating {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 1200px) {
+  .testimonials__rating {
+    margin-bottom: 10px;
+  }
+}
+
+.testimonials__rating-num {
+  font-weight: 600;
+  font-size: 18px;
+}
+
+.testimonials__comment {
+  margin-bottom: 40px;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.4;
+  letter-spacing: 0.02em;
+}
+
+@media (max-width: 992px) {
+  .testimonials__comment {
+    margin-bottom: 30px;
+    font-size: 34px;
+  }
+}
+
+@media (max-width: 768px) {
+  .testimonials__comment {
+    margin-bottom: 20px;
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 576px) {
+  .testimonials__comment {
+    font-size: 20px;
+  }
+}
+
+.testimonials__author {
+  display: flex;
+  gap: 24px;
+  align-items: center;
+  font-style: normal;
+}
+
+@media (max-width: 768px) {
+  .testimonials__author {
+    gap: 14px;
+  }
+}
+
+.testimonials__author-avatar {
+  overflow: hidden;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+}
+
+@media (max-width: 768px) {
+  .testimonials__author-avatar {
+    width: 50px;
+    height: 50px;
+  }
+}
+
+.testimonials__author-name {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.44;
+}
+
+@media (max-width: 768px) {
+  .testimonials__author-name {
+    font-size: 18px;
+  }
+}
+
+.testimonials__author-product {
+  font-weight: 500;
+  line-height: 1.62;
+  color: var(--grey-color);
+}
+
+.testimonials__controls {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  justify-content: flex-end;
+  transform: translateY(-70px);
+}
+
+@media (max-width: 576px) {
+  .testimonials__controls {
+    justify-content: center;
+    transform: translateY(0);
+  }
+}
+
+.testimonials__button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--other-light-red-color);
+  border-radius: 50%;
+  width: 49px;
+  height: 49px;
+  color: var(--white-color);
+  background-color: var(--other-light-red-color);
+  transition:
+    color var(--transition),
+    background-color var(--transition);
+}
+
+.testimonials__button:hover {
+  color: var(--other-light-red-color);
+  background-color: var(--white-color);
+}
