--- a/src/css/base/vars.css
+++ b/src/css/base/vars.css
@@ -16,6 +16,7 @@
   --container-width: 1200px;
 
   /* z-index */
+  --z-index-minus-2: -2;
   --z-index-minus-1: -1;
   --z-index-1: 1;
   --z-index-2: 2;
