--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,4 +7,5 @@
 @import './components/home/extras';
 @import './components/home/services';
 @import './components/home/testimonials';
+@import './components/home/contacts';
 @import './components/footer';
