--- a/src/css/globals/button.css
+++ b/src/css/globals/button.css
@@ -14,6 +14,12 @@
     color var(--transition);
 }
 
+@media (max-width: 768px) {
+  .button {
+    padding: 18px 30px;
+  }
+}
+
 @media (max-width: 576px) {
   .button {
     padding: 14px 30px;
