--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -30,8 +30,8 @@ body *::selection {
 .body {
   position: relative;
   overflow-x: hidden;
-  color: var(--neutral-color-100);
-  background-color: var(--neutral-color-10);
+  color: var(--dark-color);
+  background-color: var(--white-color);
 }
 
 .body--fixed {
