--- a/src/css/components/home/extras.css
+++ b/src/css/components/home/extras.css
@@ -47,6 +47,7 @@
 }
 
 .extras__item {
+  z-index: var(--z-index-1);
   display: flex;
   gap: 10px;
   align-items: center;
@@ -67,4 +68,3 @@
   font-weight: 600;
   font-size: 20px;
 }
-
