--- a/src/css/globals/_index.css
+++ b/src/css/globals/_index.css
@@ -1,5 +1,6 @@
 @import './button.css';
 @import './decors.css';
 @import './burger.css';
+@import './form.css';
 @import './modal.css';
 @import './work-status.css';
