--- a/src/css/components/footer.css
+++ b/src/css/components/footer.css
@@ -1,3 +1,50 @@
 .footer {
-  background-color: var(--grey-color);
+  padding: 120px 0;
+  background-color: var(--light-grey-color);
+}
+
+@media (max-width: 576px) {
+  .footer {
+    padding: 60px 0;
+  }
+}
+
+.footer__info {
+  display: flex;
+  gap: 40px;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 576px) {
+  .footer__info {
+    align-items: center;
+    text-align: center;
+  }
+}
+
+.footer__logo {
+  max-width: 200px;
+}
+
+@media (max-width: 576px) {
+  .footer__logo {
+    max-width: 150px;
+  }
+}
+
+.footer__org {
+  line-height: 1.3;
+}
+
+.footer__copyright {
+  font-size: 20px;
+  text-align: center;
+}
+
+@media (max-width: 576px) {
+  .footer__copyright {
+    font-size: 18px;
+    text-align: center;
+  }
 }
