--- a/src/css/base/vars.css
+++ b/src/css/base/vars.css
@@ -3,6 +3,7 @@
   --white-color: #fff;
   --other-white-color: #f5f5f5;
   --dark-color: #000;
+  --light-dark-color: #323555;
   --other-dark-color: #0c0c0c;
   --red-color: #fd0000;
   --light-red-color: #e71e2d;
