--- a/src/css/components/service-item-page/service-item-page.css
+++ b/src/css/components/service-item-page/service-item-page.css
@@ -1,3 +1,9 @@
 .service-item-page {
-  padding: 120px 0;
+  padding: 160px 0 120px;
+}
+
+@media (max-width: 576px) {
+  .service-item-page {
+    padding: 100px 0 60px;
+  }
 }
