--- a/src/css/globals/modal.css
+++ b/src/css/globals/modal.css
@@ -136,3 +136,9 @@
     padding: 14px 20px;
   }
 }
+
+.modal__description {
+  margin-top: 10px;
+  font-size: 12px;
+  color: var(--grey-color);
+}
